alignment fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,9 @@ a:hover {
 }
 
 .home-layout .section ul {
-  display: inline;
   list-style: none;
-  padding: 0;
-  margin: 0 0 0 100px;
+  padding-top: 0.5em;
+  margin: 0 0 20px 100px;
 }
 
 .home-layout .section ul::before {
